(fix) typo in options.html

--- a/options.html
+++ b/options.html
@@ -17,7 +17,7 @@
 <div>
     <p>This application stores only hostnames of visited sites and never processes other parts of URLs or data on
         web pages.</p>
-    <p>All recorded data is stored locally and never sent to remove servers.</p>
+    <p>All recorded data is stored locally and never sent to remote servers.</p>
 </div>
 <br>
 <br>
