(feat) ignore inactive in stat calcs

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 
 <head>
     <link rel="stylesheet" href="popup.css">
+    <title>Browsetime</title>
 </head>
 
 <body>
