--- a/options.html
+++ b/options.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 
 <head>
     <link rel="stylesheet" href="options.css">
+    <title>Browsetime | Options</title>
 </head>
 
 <body>
 <div>
     <h3>Thank you for using BrowseTime!</h3>
-    <h3>You are welcome to leave your feedback, request new features or report bugs
-        to <a href="mailto:browsetime.ext@google.com">browsetime.ext@google.com</a>
+    <h3>Please request new features or report bugs <a target="_blank"
+                                                                  href="https://github.com/browsetime/browsetime.ext/issues">here</a>.
     </h3>
-    <h3>Source code is available at <a href="https://github.com/browsetime/browsetime.ext">github.com/browsetime/browsetime.ext</a>
+    <h3>Contact us at <a href="mailto:browsetime.ext@google.com">browsetime.ext@google.com</a>.
+        <br>
+        Your feedback is highly appreciated!
+    </h3>
+    <h3>Source code is available at <a target="_blank" href="https://github.com/browsetime/browsetime.ext">github.com/browsetime/browsetime.ext</a>
     </h3>
 </div>
 <div>
-    <p>This application stores only hostnames of visited sites and never processes other parts of URLs or data on
-        web pages.</p>
-    <p>All recorded data is stored locally and never sent to remote servers.</p>
+    <p>This application stores hostnames of visited websites and never processes other parts of URLs or data on
+        web pages you visit.</p>
+    <p>All data is stored on your computer only and never sent to remote servers.</p>
 </div>
 <br>
 <br>
 <div id='reset-area'>
     <div id="reset-main-area">
-        <button class="red" id="reset">Clear data</button>
+        <button class="red" id="reset">Clear ALL data</button>
     </div>
     <div id="reset-confirm-area" class='hide'>
         <p class="red">Do you really want to delete all history and statistics data?</p>
@@ -32,7 +37,7 @@
         <button id="reset-delete">Delete application data</button>
     </div>
     <div id="reset-final-area" class='hide'>
-        <p>Application data was succesfully removed!</p>
+        <p>Application data was successfully removed!</p>
     </div>
 </div>
 </body>
